--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,16 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Create .env for CI
+        run: |
+          echo 'VITE_API_KEY="test"' >> .env
+          echo 'VITE_FIREBASE_API_KEY="test"' >> .env
+          echo 'VITE_FIREBASE_AUTH_DOMAIN="test.firebaseapp.com"' >> .env
+          echo 'VITE_FIREBASE_PROJECT_ID="test"' >> .env
+          echo 'VITE_FIREBASE_STORAGE_BUCKET="test.appspot.com"' >> .env
+          echo 'VITE_FIREBASE_MESSAGING_SENDER_ID="test"' >> .env
+          echo 'VITE_FIREBASE_APP_ID="test"' >> .env
       - run: npm install
       - run: npm run build
       - run: npm test
