--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,13 @@ jobs:
 
       - name: Create .env for CI
         run: |
-          echo 'VITE_API_KEY="test"' >> .env
-          echo 'VITE_FIREBASE_API_KEY="test"' >> .env
-          echo 'VITE_FIREBASE_AUTH_DOMAIN="test.firebaseapp.com"' >> .env
-          echo 'VITE_FIREBASE_PROJECT_ID="test"' >> .env
-          echo 'VITE_FIREBASE_STORAGE_BUCKET="test.appspot.com"' >> .env
-          echo 'VITE_FIREBASE_MESSAGING_SENDER_ID="test"' >> .env
-          echo 'VITE_FIREBASE_APP_ID="test"' >> .env
+          echo "VITE_API_KEY=${{ secrets.VITE_API_KEY }}" >> .env
+          echo "VITE_FIREBASE_API_KEY=${{ secrets.VITE_FIREBASE_API_KEY }}" >> .env
+          echo "VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}" >> .env
+          echo "VITE_FIREBASE_PROJECT_ID=${{ secrets.VITE_FIREBASE_PROJECT_ID }}" >> .env
+          echo "VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }}" >> .env
+          echo "VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}" >> .env
+          echo "VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }}" >> .env
       - run: npm install
       - run: npm run build
       - run: npm test
