--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
-    "firebase": "^11.9.0",
+    "firebase": "^11.9.1",
+    "framer-motion": "^12.17.0",
+    "generative-ai": "^0.1.4",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-google-button": "^0.8.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5"
   },
